  - Cleaner headers in Notification Emails (Pierre de La Morinerie)
  - Blob and tree gfm links to anchors work
  - Piwik Integration (Sebastian Winkler)
  - Show contribution guide link for new issue form (Jeroen van Baarsen)
  - Fix CI status for merge requests from fork 
  - Added option to remove issue assignee on project issue page and issue edit page (Jason Blanchard)

v 6.6.2
  - Fix 500 error on branch/tag create or remove via UI

v 6.6.1
  - Fix 500 error on files tab if submodules presents

v 6.6.0
  - Retrieving user ssh keys publically(github style): http://__HOST__/__USERNAME__.keys
  - Permissions: Developer now can manage issue tracker (modify any issue)
  - Improve Code Compare page performance
  - Group avatar
  - Pygments.rb replaced with highlight.js
  - Improve Merge request diff store logic
  - Improve render performnace for MR show page
  - Fixed Assembla hardcoded project name
  - Jira integration documentation
  - Refactored app/services
  - Remove snippet expiration
  - Mobile UI improvements (Drew Blessing)
  - Fix block/remove UI for admin::users#show page
  - Show users' group membership on users' activity page (Robert Djurasaj)
  - User pages are visible without login if user is authorized to a public project
  - Markdown rendered headers have id derived from their name and link to their id
  - Improve application to work faster with large groups (100+ members)
  - Multiple emails per user
  - Show last commit for file when view file source
  - Restyle Issue#show page and MR#show page
  - Ability to filter by multiple labels for Issues page
  - Rails version to 4.0.3
  - Fixed attachment identifier displaying underneath note text (Jason Blanchard)

v 6.5.1
  - Fix branch selectbox when create merge request from fork

v 6.5.0
  - Dropdown menus on issue#show page for assignee and milestone (Jason Blanchard)
  - Add color custimization and previewing to broadcast messages
  - Fixed notes anchors
  - Load new comments in issues dynamically